--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -60,9 +60,16 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="jb-navbar-collapse">
           <ul class="nav navbar-nav">
-            {% assign pages_list = site.pages %}
-            {% assign group = 'navigation' %}
-            {% include JB/pages_list %}
+            <li ><a href="/pages/events.html" class="active">Events</a></li>
+            
+            <li><a href="/pages/prochainsEvents.html">Prochains Events</a></li>
+          
+            <li><a href="/pages/about.html">About</a></li>
+            
+            <li><a href="/pages/contact.html">Contact ou support</a></li>
+            
+             <li><a href="/archive.html">Archive</a></li>
+        
           </ul>
           
         </div><!-- /.navbar-collapse -->
